configurations/server-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      component: server
  template: 
    metadata: 
      labels: 
        component: server
    spec: 
      containers: 
        - image: hamza156/docker-react-app-server-image
          name: server
          ports: 
            - containerPort: 5000
