configurations/client-cluster-ip-service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: client-cluster-ip-service
spec:
  type: ClusterIP 
  replicas: 3
  selector: 
    component: web
  ports: 
    - port: 3000 
      targetPort: 3000
